Test/dafny0/RestrictedBoundedPools.dfy.expect
RestrictedBoundedPools.dfy(78,4): Error: a forall expression involved in a predicate definition is not allowed to depend on the set of allocated references, but values of 'x' may contain references (perhaps declare its type, 'Opaque', as 'Opaque(!new)') (see documentation for 'older' parameters)
RestrictedBoundedPools.dfy(83,4): Error: a exists expression involved in a predicate definition is not allowed to depend on the set of allocated references, but values of 'x' may contain references (perhaps declare its type, 'Opaque', as 'Opaque(!new)') (see documentation for 'older' parameters)
RestrictedBoundedPools.dfy(88,4): Error: a forall expression involved in a predicate definition is not allowed to depend on the set of allocated references, but values of 'x' may contain references (perhaps declare its type, 'X', as 'X(!new)') (see documentation for 'older' parameters)
RestrictedBoundedPools.dfy(93,4): Error: a exists expression involved in a predicate definition is not allowed to depend on the set of allocated references, but values of 'x' may contain references (perhaps declare its type, 'X', as 'X(!new)') (see documentation for 'older' parameters)
RestrictedBoundedPools.dfy(98,4): Error: a forall expression involved in a predicate definition is not allowed to depend on the set of allocated references, but values of 'c' may contain references (see documentation for 'older' parameters)
RestrictedBoundedPools.dfy(113,4): Error: a forall expression involved in a predicate definition is not allowed to depend on the set of allocated references, but values of 'xs' may contain references (see documentation for 'older' parameters)
RestrictedBoundedPools.dfy(123,4): Error: a forall expression involved in a predicate definition is not allowed to depend on the set of allocated references, but values of 'xs' may contain references (see documentation for 'older' parameters)
RestrictedBoundedPools.dfy(133,4): Error: a forall expression involved in a predicate definition is not allowed to depend on the set of allocated references, but values of 'xs' may contain references (see documentation for 'older' parameters)
RestrictedBoundedPools.dfy(155,17): Error: the result of a set comprehension must be finite, but Dafny's heuristics can't figure out how to produce a bounded set of values for 'o'
RestrictedBoundedPools.dfy(170,23): Error: a set comprehension involved in a function definition is not allowed to depend on the set of allocated references, but values of 'o' may contain references (perhaps declare its type, 'Opaque', as 'Opaque(!new)') (see documentation for 'older' parameters)
RestrictedBoundedPools.dfy(182,23): Error: a set comprehension involved in a function definition is not allowed to depend on the set of allocated references, but values of 'xs' may contain references (see documentation for 'older' parameters)
RestrictedBoundedPools.dfy(188,17): Error: a set comprehension involved in a function definition is not allowed to depend on the set of allocated references, but values of 'xs' may contain references (see documentation for 'older' parameters)
RestrictedBoundedPools.dfy(194,23): Error: a set comprehension involved in a function definition is not allowed to depend on the set of allocated references, but values of 'xs' may contain references (see documentation for 'older' parameters)
RestrictedBoundedPools.dfy(206,9): Error: iset comprehensions in non-ghost contexts must be compilable, but Dafny's heuristics can't figure out how to produce or compile a bounded set of values for 'o'
RestrictedBoundedPools.dfy(224,9): Error: set comprehensions in non-ghost contexts must be compilable, but Dafny's heuristics can't figure out how to produce or compile a bounded set of values for 'c'
RestrictedBoundedPools.dfy(228,9): Error: set comprehensions in non-ghost contexts must be compilable, but Dafny's heuristics can't figure out how to produce or compile a bounded set of values for 'c'
RestrictedBoundedPools.dfy(242,18): Error: a function definition is not allowed to depend on the set of allocated references
RestrictedBoundedPools.dfy(247,4): Error: a function definition is not allowed to depend on the set of allocated references
RestrictedBoundedPools.dfy(252,4): Error: a twostate function definition is not allowed to depend on the set of allocated references
RestrictedBoundedPools.dfy(258,4): Error: a twostate function definition is not allowed to depend on the set of allocated references
RestrictedBoundedPools.dfy(277,18): Error: set comprehensions in non-ghost contexts must be compilable, but Dafny's heuristics can't figure out how to produce or compile a bounded set of values for 'x'
RestrictedBoundedPools.dfy(278,18): Error: map comprehensions in non-ghost contexts must be compilable, but Dafny's heuristics can't figure out how to produce or compile a bounded set of values for 'x'
RestrictedBoundedPools.dfy(292,4): Error: a set comprehension involved in a function definition is not allowed to depend on the set of allocated references, but values of 'zs' may contain references (see documentation for 'older' parameters)
23 resolution/type errors detected in RestrictedBoundedPools.dfy
